# rag_library_ai

./: .gitignore  CONTRIBUTING.md  README.md  app.py  fast_chunker-0.1.0-cp310-abi3-manylinux_2_34_x86_64.whl  ingest.py  query.py  requirements.txt
fast_chunker/: Cargo.toml  pyproject.toml
fast_chunker/src/: lib.rs
rag_library_ai_deploy/: README.md  app.py  pyproject.toml  query.py  requirements.txt
rag_library_ai_deploy/.streamlit/: config.toml
rag_library_ai_deploy/vectorstore/db/26d45d2e-196e-405e-aa30-744dea7aaea6/: index_metadata.pickle
vectorstore/db/26d45d2e-196e-405e-aa30-744dea7aaea6/: index_metadata.pickle
