[project]
name = "rag-technical-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.8",
    "langchain>=1.2.16",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "onnxruntime==1.19.2",
    "opentelemetry-exporter-otlp-proto-grpc==1.11.1",
    "protobuf<4.0.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
]
